Fixes layout bugs for big networks in networks section

--- a/frontend/src/style/table-common.scss
+++ b/frontend/src/style/table-common.scss
@@ -25,7 +25,6 @@
 
 .table-number {
   text-align: end;
-  width: 3rem;
 }
 
 .group-title {
@@ -76,4 +75,8 @@
 
 .list-item {
   height: $table-row-height;
+}
+
+.item-wrapper {
+  width: 100%;
 }
